--- a/website-frontend/client/index.html
+++ b/website-frontend/client/index.html
@@ -67,7 +67,7 @@
             <div class="col">
                 <h2> Download SewAnalyst</h2>
                 <!-- Have made this a submit button; might cause an issue later-->
-                <!--<button type="submit" class="btn-cool" id = "onlythesebuttons" style="background-color: rgb(30,55,73); color: white" onclick="downloadFunction()"> Download</button>-->
+                <button type="submit" class="btn-cool" id = "downloadSoftware" style="background-color: rgb(30,55,73); color: white"> Download</button>
                 <!-- Once the button is clicked, we need a popup that checks if you're really sure -->
                 <div class="popup"> 
                     <h2> Are you really sure? </h2>
