working software download :))

--- a/website-frontend/client/index.html
+++ b/website-frontend/client/index.html
@@ -66,18 +66,22 @@
             </div>
             <div class="col">
                 <h2> Download SewAnalyst</h2>
-                <!-- Have made this a submit button; might cause an issue later-->
-                <!--<button type="submit" class="btn-cool" id = "downloadSoftware" style="background-color: rgb(30,55,73); color: white"> Download</button>-->
+                <!-- USE THIS -->
+
+                <form action="/program_download" method="get">
+                <button type="submit" class="btn-cool" id = "downloadSoftware" style="background-color: rgb(30,55,73); color: white"> Download</button>
+                </form>
+
                 <!-- Once the button is clicked, we need a popup that checks if you're really sure -->
-                <div class="popup"> 
+                <!--<div class="popup"> 
                     <h2> Are you really sure? </h2>
-                </div>
+                </div>-->
             </div>
                 <div style="background-color: rgb(15,28,37); color: white">
                 <h4> <b>Disclaimer:</b><br> </h4>
                     <p>SewAnalyst can only generate reports to the best of our ability with the data that is provided to us. We are in no way affiliated with the EA, and aim to provdie guidance and clarity on these matters </p>
                 </div>
-            <a href="#" class="btn-cool" id="downloadSoftware">
+            <!--<a href="#" class="btn-cool" id="downloadSoftware">
                 <div class="completed">
                     <i class="fas fa-check-circle"></i>
                     <span>Completed</span>
@@ -86,7 +90,7 @@
                     <i class="fas fa-download"></i>
                     <span>Download</span>
                 </div>
-            </a>
+            </a>-->
         
             <script>
                 const btn = document.querySelector('.btn-cool')
