--- a/website-frontend/client/index.html
+++ b/website-frontend/client/index.html
@@ -107,7 +107,7 @@
     <div class="container" id="reportsPage" style="display:none">
         <div class="row align-items-start central">
             <form action="/report/report1.pdf" method="get">
-                <button type = "submit" class = "btn" id = "onlythesebuttons" style="margin-top:15%; background-color: rgb(53,93,123); color: white">Download Report</button>
+                <button type = "submit" class = "btn" id = "onlythesebuttons" style="margin-top:10%; background-color: rgb(53,93,123); color: white;">Download Report</button>
             </form>
                 <form style="background-color: rgb(15,28,37); color: white; padding-bottom: 10px; box-shadow: 2px 2px 5px #333;" action="/flagReport" method="post">
                     <!-- Need Report Number, Date of Submission, Reason for form submission, button to confirm that you're being truthful -->
