--- a/website-frontend/client/index.html
+++ b/website-frontend/client/index.html
@@ -105,8 +105,9 @@
 
     <div class="container" id="reportsPage" style="display:none">
         <div class="row align-items-start central">
-            <form id = "getReport" action="/report/report1.pdf" method="get">
-                <button type = "submit" class = "btn" id = "onlythesebuttons" style="margin-top:10%; background-color: rgb(53,93,123); color: white;">Download Report</button>
+            <form id = "getReport" action="http://127.0.0.1:8090/reportDownload">
+                <input type="text" id='InputReportNumber' name='InputReportNumber' required>
+                <input type = "submit" class = "btn" id = "onlythesebuttons" style="margin-top:10%; background-color: rgb(53,93,123); color: white;">
             </form>
                 <form id="flagReportForm" method="POST" action="/flagReport" style="background-color: rgb(15,28,37); color: white; padding-bottom: 10px; box-shadow: 2px 2px 5px #333;">
                     <!-- Need Report Number, Date of Submission, Reason for form submission, button to confirm that you're being truthful -->
