--- a/website-frontend/client/index.html
+++ b/website-frontend/client/index.html
@@ -105,30 +105,37 @@
 
     <div class="container" id="reportsPage" style="display:none">
         <div class="row align-items-start central">
-            <form id = "getReport" action="http://127.0.0.1:8090/reportDownload">
+            <!--<form id = "getReport" action="http://127.0.0.1:8090/reportDownload">
                 <input type="text" id='InputReportNumber' name='InputReportNumber' required>
                 <input type = "submit" class = "btn" id = "onlythesebuttons" style="margin-top:10%; background-color: rgb(53,93,123); color: white;">
+            </form>-->
+            <table style = "width:100%">
+                <tr>
+                    <td>Report Name</td>
+                    <td>Times Flagged</td>
+                    <td>Flag Report</td>
+                </tr>
+            </table>
+            <form id="flagReportForm" method="POST" action="/flagReport" style="background-color: rgb(15,28,37); color: white; padding-bottom: 10px; box-shadow: 2px 2px 5px #333;">
+                <!-- Need Report Number, Date of Submission, Reason for form submission, button to confirm that you're being truthful -->
+                <div class="mb-3">
+                    <label for="InputReportNumber" class="form-label"> Report Number </label>
+                    <input type="number" class="form-control" id="InputReportNumber" required>
+                </div>
+                <div class="mb-3">
+                    <label for="InputDateOfSubmission" class="form-label"> Date of Form Submission </label>
+                    <input type="date" class="form-control" id="InputDateOfSubmission" required>
+                </div>
+                <div class="mb-3">
+                    <label for="InputReason" class="form-label"> Reason for Form Submission </label>
+                    <input type="text" class="form-control" id="InputReason">
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="Checkbox">
+                    <label class="form-check-label" for="Checkbox"> I confirm that I am being truthful in my report <!-- Can change wording later --> </label>
+                </div>
+                <input id="flagReportBtn" type="submit" style = "margin-bottom:10px; padding: 10px 60px; background:white ; color:rgb(30,55,73); border: 0; outline: none; cursor: pointer; font-size: 14px; font-weight: 500; border-radius: 12px;">
             </form>
-                <form id="flagReportForm" method="POST" action="/flagReport" style="background-color: rgb(15,28,37); color: white; padding-bottom: 10px; box-shadow: 2px 2px 5px #333;">
-                    <!-- Need Report Number, Date of Submission, Reason for form submission, button to confirm that you're being truthful -->
-                    <div class="mb-3">
-                        <label for="InputReportNumber" class="form-label"> Report Number </label>
-                        <input type="number" class="form-control" id="InputReportNumber" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="InputDateOfSubmission" class="form-label"> Date of Form Submission </label>
-                        <input type="date" class="form-control" id="InputDateOfSubmission" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="InputReason" class="form-label"> Reason for Form Submission </label>
-                        <input type="text" class="form-control" id="InputReason">
-                    </div>
-                    <div class="mb-3 form-check">
-                        <input type="checkbox" class="form-check-input" id="Checkbox">
-                        <label class="form-check-label" for="Checkbox"> I confirm that I am being truthful in my report <!-- Can change wording later --> </label>
-                    </div>
-                    <input id="flagReportBtn" type="submit" style = "margin-bottom:10px; padding: 10px 60px; background:white ; color:rgb(30,55,73); border: 0; outline: none; cursor: pointer; font-size: 14px; font-weight: 500; border-radius: 12px;">
-                </form>
         </div>
 
     </div>
