--- a/website-frontend/client/index.html
+++ b/website-frontend/client/index.html
@@ -109,7 +109,7 @@
                 <input type="text" id='InputReportNumber' name='InputReportNumber' required>
                 <input type = "submit" class = "btn" id = "onlythesebuttons" style="margin-top:10%; background-color: rgb(53,93,123); color: white;">
             </form>-->
-            <table id="table">
+            <table id="table";>
                 <tr>
                     <td>Report Name</td>
                     <td>Times Flagged</td>
