--- a/website-frontend/client/index.html
+++ b/website-frontend/client/index.html
@@ -106,10 +106,10 @@
     <div class="container" id="reportsPage" style="display:none">
         <!-- Something is going wrong here with the centering-->
         <div class="row align-items-start central">
-            <!--<form id = "getReport" action="http://127.0.0.1:8090/reportDownload">
+            <form id = "getReport" action="/reportDownload" method = "GET">
                 <input type="text" id='InputReportNumber' name='InputReportNumber' required>
                 <input type = "submit" class = "btn" id = "onlythesebuttons" style="margin-top:10%; background-color: rgb(53,93,123); color: white;">
-            </form>-->
+            </form>
             
             <table class="table" id="tab">
                 <thead>
