making reports clickable

--- a/website-frontend/client/index.html
+++ b/website-frontend/client/index.html
@@ -106,10 +106,10 @@
     <div class="container" id="reportsPage" style="display:none">
         <!-- Something is going wrong here with the centering-->
         <div class="row align-items-start central">
-            <form id = "getReport" action="/reportDownload" method = "GET">
+            <!--<form id = "getReport" action="/reportDownload" method = "GET">
                 <input type="text" id='InputReportNumber' name='InputReportNumber' required>
                 <input type = "submit" class = "btn" id = "onlythesebuttons" style="margin-top:10%; background-color: rgb(53,93,123); color: white;">
-            </form>
+            </form>-->
             
             <table class="table" id="tab">
                 <thead>
@@ -122,20 +122,20 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row">Report 1</th>
+                    <th scope="row"><button id = "getReport" class="link">Report 1</button></th>
                     <td><img id="alerts" src="Green alert.jpg" ></td>
                     <!-- Each REPORT button will need to be attached to that specific report and not just the general "report" form below, but it -->
                     <td><button onclick="openList()"><img src="http://clipart-library.com/data_images/81597.png" style="width:50px; height:50px"></button> </td>
                     <td><button type="button" class="btn" id="reportbutton" onclick="openForm()">  REPORT</button></td>
                 </tr>
                   <tr>
-                    <th scope="row">Report 2</th>
+                    <th scope="row"><button id = "getReport" class="link">Report 2</button></th>
                     <td><img id="alerts" src="Yellow alert.jpg"></td>
                     <td><button onclick="openList()"><img src="http://clipart-library.com/data_images/81597.png" style="width:50px; height:50px"></button> </td>
                     <td><button type="button" class="btn" id="reportbutton" onclick= "openForm()">  REPORT</button></td>
                   </tr>
                   <tr>
-                    <th scope="row">Report 3</th>
+                    <th scope="row"><button id = "getReport" class="link">Report 3</button></th>
                     <td><img id="alerts" src="Red alert.jpg"></td>
                     <td><button onclick="openList()"><img src="http://clipart-library.com/data_images/81597.png" style="width:50px; height:50px"></button> </td>
                     <td><button type="button" class="btn" id="reportbutton" onclick= "openForm()">  REPORT</button></td>
