--- a/website-frontend/client/index.html
+++ b/website-frontend/client/index.html
@@ -51,7 +51,7 @@
                     <ul>
                         <!--<li><div class="btn"><a href = "/downloadSoftware" onclick="route()">Download Software</a></div></li>-->
     
-                        <li><div class="btn"><a href = "/viewReports" onclick="route()">View Past Reports</a></div></li>
+                        <li><button class="btn" id="onlythesebuttons" style = "margin:10px; background-color: rgb(30,55,73)"><a href = "/viewReports" onclick="route()" style = "color: white">View Past Reports</a></button></li>
     
                     </ul>
                 </nav>
