home button switch

--- a/website-frontend/client/index.html
+++ b/website-frontend/client/index.html
@@ -21,13 +21,14 @@
     <nav class="navbar sticky-top navbar-light" style="background-color: rgb(195,204,222); box-shadow: 2px 2px 5px #333">
         <div class="container-fluid">
             <!-- this should be our logo but for now I'll just put the WASP one here (maybe we have both??) https://static.wixstatic.com/media/cda311_f2f55607eaa04530ba68783d80db13aa~mv2.png/v1/fill/w_246,h_255,al_c,lg_1,q_85,enc_auto/cda311_f2f55607eaa04530ba68783d80db13aa~mv2.png -->
-            <img src="Logo without a background.png" alt="SewAnalyst logo" widht="60" height="60">
-            <h1 id="title_word"><b>SewAnalyst</b> </h1>
-           <a class="btn" onclick= "document.getElementById('homepage').style.display='block'; document.getElementById('softwarePage').style.display='none'; document.getElementById('reportsPage').style.display='none';"> 
-              <img src="https://cdn-icons-png.flaticon.com/512/1946/1946488.png" alt="SewAnalyst Logo" width="30" height="30">            
+            <a class="btn" onclick= "document.getElementById('homepage').style.display='block'; document.getElementById('softwarePage').style.display='none'; document.getElementById('reportsPage').style.display='none';"> 
+                <img src="https://cdn-icons-png.flaticon.com/512/1946/1946488.png" alt="SewAnalyst Logo" width="30" height="30">            
             </a> 
-          </div>
-      </nav>
+            <h1 id="title_word"><b>SewAnalyst</b> </h1>
+            <img src="Logo without a background.png" alt="SewAnalyst logo" height="60">
+            
+        </div>
+    </nav>
     
 
     <!-- Homepage-->
