--- a/website-frontend/client/index.html
+++ b/website-frontend/client/index.html
@@ -59,6 +59,9 @@
                             <button class="btn" id="onlythesebuttons" style = "margin:10px; background-color: rgb(30,55,73)"><a href = "/viewReports" onclick="route()" style = "color: white">View Past Reports</a></button>
                     </nav>
                     </li>
+
+
+                    <li><button type="button" class="btn" id="onlythesebuttons" style = "margin:10px; background-color: rgb(30,55,73); color: white" onclick= uploadReportForm()>Upload Report</button></ldocument.getElemi>
                 </ul>
 
             </div>
@@ -234,6 +237,25 @@
         </div>
 
     </div>-->
+
+    <!--Upload Report Form-->
+
+    <div class="flagReportFormBox" id="flagReportFormBox"></div>
+            <form class="formContainer" method="POST" action="/upload">
+                <div class="mb-3">
+                    <label for="InputReason" class="form-label" style="color: white; font-weight:500;"><b>Name</b> </label>
+                    <!-- Have something here confirming that you are being truthful in your submission - maybe a popup when you click submit??-->
+                    <!--<texarea name="Text1" rows="5"><input type="text" placeholder="Enter Reason" class="form-control" id="InputReason"></texarea>
+                </div> -->
+                <!--<input type="checkbox" class="form-check-input" id="Checkbox">
+                <label class="form-check-label" for="Checkbox" style="color:white; padding-bottom:2%;"> I confirm that I am being truthful in my report</label> <br>
+                <button type="submit" class="btn" id="flagReportBtn"> SUBMIT</button>-->
+                <!-- Idk if changing this button is going to cause issues so I've just left the old button here just in case-->
+               
+                <!--<button type="button" class="btn cancel" onclick="closeForm()"> CLOSE</button>
+            </form>
+            </div>
+
 
 
 
