added mac download button

--- a/website-frontend/client/index.html
+++ b/website-frontend/client/index.html
@@ -109,8 +109,11 @@
                 <img src="../Logo without a background.png" style="width:50%; padding-bottom: 5%">
                 <h2 style="color: white; font-weight:700;"> Download SewAnalyst</h2>
                 <!-- Have made this a submit button; might cause an issue later-->
-                <form action="/program_download" method="get">
-                <button type="submit" class="btn-cool" id = "downloadSoftware" style="background-color: rgb(30,55,73); color: white; margin-bottom: 20%;"> Download</button> <br>
+                <form action="/program_download-win" method="get">
+                <button type="submit" class="btn-cool" id = "downloadSoftware-win" style="background-color: rgb(30,55,73); color: white; margin-bottom: 20%;"> Download for Windows</button> <br>
+                </form>
+                <form action="/program_download-mac" method="get">
+                    <button type="submit" class="btn-cool" id = "downloadSoftware-mac" style="background-color: rgb(30,55,73); color: white; margin-bottom: 20%;"> Download for MAC</button> <br>
                 </form>
                 </div>
                 <div style="color:rgb(195,204,222); width:90%; margin: 0 auto;">
